--- a/cnn_cifar.ipynb
+++ b/cnn_cifar.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
    "source": [
     "# Hyper-parameters \n",
     "num_epochs = 200\n",
-    "batch_size = 16\n",
+    "batch_size = 4\n",
     "learning_rate = 0.001\n",
     "\n",
     "# dataset has PILImage images of range [0, 1]. \n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,8 +178,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apple silicon @ 4: Finished Training in 8829.70 seconds\n",
-    "Apple silicon @ 16: Finished Training in 2818.96 seconds"
+    "- Apple silicon @ 4: Finished Training in 8829.70 seconds\n",
+    "- Apple silicon @ 16: Finished Training in 2818.96 seconds\n",
+    "- CUDA @ 4: Finished Training in 10554.78 seconds"
    ]
   },
   {
