--- a/cnn_cifar.ipynb
+++ b/cnn_cifar.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Device configuration\n",
     "if torch.cuda.is_available():\n",
     "  device = torch.device('cuda')\n",
+    "  print('Using GPU')\n",
     "elif torch.backends.mps.is_available():\n",
     "  device = torch.device('mps')\n",
+    "  print('Using MPS')\n",
     "else:\n",
-    "  device = torch.device('cpu')"
+    "  device = torch.device('cpu')\n",
+    "  print('Using CPU')"
    ]
   },
   {
@@ -45,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Hyper-parameters \n",
-    "num_epochs = 200\n",
+    "num_epochs = 5\n",
     "batch_size = 4\n",
     "learning_rate = 0.001\n",
     "\n",
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
