--- a/maxpool_test.ipynb
+++ b/maxpool_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,13 @@
     "\n",
     "m2 = nn.MaxPool2d(2, ceil_mode=True)\n",
     "print(m2(input).shape)\n",
-    "print(m2(input))\n"
+    "print(m2(input))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
