--- a/Transfer Learning.ipynb
+++ b/Transfer Learning.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "### DEFINE TRANSFORMATIONS ###\n",
     "normalizer = transforms.Normalize(mean = [0.485, 0.456, 0.406],\n",
-    "                                  std = [0.229, 0.224, 0.225]) ### IMAGENET MEAN/STD ###\n",
+    "                                  std = [0.229, 0.224, 0.225]) ### MEAN/STD ###\n",
     "train_transforms = transforms.Compose([\n",
     "                                        transforms.Resize((224,224)),\n",
     "                                        transforms.RandomHorizontalFlip(),\n",
