Update Transfer Learning Corr.ipynb

--- a/Transfer Learning Corr.ipynb
+++ b/Transfer Learning Corr.ipynb
@@ -10,20 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1719367b-a3ad-4307-aea8-5a474abc9b81",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using MPS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -46,13 +38,13 @@
     "# GPU device configuration\n",
     "if torch.cuda.is_available():\n",
     "  DEVICE = torch.device('cuda')\n",
-    "  print('Using GPU')\n",
+    "  print('Using CUDA')\n",
     "elif torch.backends.mps.is_available():\n",
     "  DEVICE = torch.device('mps')\n",
     "  print('Using MPS')\n",
     "else:\n",
     "  DEVICE = torch.device('cpu')\n",
-    "  print('Using CPU')\n"
+    "  print('Using CPU')"
    ]
   },
   {
@@ -76,13 +68,21 @@
     "normalizer = transforms.Normalize(mean = [0.485, 0.456, 0.406],\n",
     "                                  std = [0.229, 0.224, 0.225])\n",
     "train_transforms = transforms.Compose([\n",
-    "                                        transforms.Lambda(lambda img: img.crop((20, 0, 150, 130))),  # Crop\n",
-    "                                        transforms.Resize((224,224)),\n",
-    "                                        transforms.Lambda(lambda img: img.convert(\"RGB\")),\n",
-    "                                        transforms.RandomHorizontalFlip(),\n",
-    "                                        transforms.ToTensor(),\n",
-    "                                        normalizer\n",
-    "                                      ])\n",
+    "                    transforms.Resize((224,224)),\n",
+    "                    transforms.ConvertImageDtype(torch.float),\n",
+    "                    transforms.RandomHorizontalFlip(),\n",
+    "                    transforms.ToTensor(),\n",
+    "                    normalizer\n",
+    "                    ])\n",
+    "\n",
+    "# train_transforms = transforms.Compose([\n",
+    "#                                         transforms.Lambda(lambda img: img.crop((20, 0, 150, 130))),  # Crop\n",
+    "#                                         transforms.Resize((224,224)),\n",
+    "#                                         transforms.Lambda(lambda img: img.convert(\"RGB\")),\n",
+    "#                                         transforms.RandomHorizontalFlip(),\n",
+    "#                                         transforms.ToTensor(),\n",
+    "#                                         normalizer\n",
+    "#                                       ])\n",
     "\n",
     "class GuessTheCorrelationDataset(Dataset):\n",
     "  def __init__(self, root, transform=None, indexes=None):\n",
@@ -106,14 +106,14 @@
     "  \n",
     "  def __getitem__(self, idx):\n",
     "    img_path = os.path.join(self.img_dir, self.img_files.iloc[idx])\n",
-    "    image = Image.open(img_path).convert('L')  # Convert to grayscale\n",
+    "    image = Image.open(img_path)\n",
     "    \n",
     "    if self.transform:\n",
     "      image = self.transform(image)\n",
     "    \n",
-    "    correlation = torch.tensor(self.correlations[idx], dtype=torch.float32)\n",
+    "    label = torch.tensor(self.correlations[idx], dtype=torch.float32)\n",
     "    \n",
-    "    return image, correlation"
+    "    return image, label"
    ]
   },
   {
@@ -121,52 +121,16 @@
    "execution_count": 11,
    "id": "575bc6d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of images: 150000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "root = os.path.expanduser(\"~/Documents/PyTorch_Data/correlation/guess-the-correlation\")\n",
+    "if os.name == 'posix':\n",
+    "  root = os.path.expanduser(\"~/Documents/PyTorch_Data/correlation/guess-the-correlation\")\n",
+    "else:\n",
+    "  root = \"d:\\\\PyTorch_Data\\\\guess-the-correlation\"\n",
+    "  \n",
     "train_imgs_path = os.path.join(root, 'train_imgs')\n",
-    "\n",
-    "num_images = len([name for name in os.listdir(train_imgs_path) if os.path.isfile(os.path.join(train_imgs_path, name))])\n",
-    "\n",
-    "print(f\"Number of images: {num_images}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a7581d95",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<torch.utils.data.dataloader.DataLoader object at 0x1571ef690> \n",
-      " <torch.utils.data.dataloader.DataLoader object at 0x158c4c110> \n",
-      " <torch.utils.data.dataloader.DataLoader object at 0x158e20810>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Dataset creation\n",
-    "train_ds = GuessTheCorrelationDataset(root, transform=train_transforms, indexes=range(30000))\n",
-    "valid_ds = GuessTheCorrelationDataset(root, transform=train_transforms, indexes=range(30000, 40000))\n",
-    "test_ds = GuessTheCorrelationDataset(root, transform=train_transforms, indexes=range(40000, 50000))\n",
-    "\n",
-    "# DataLoader creation\n",
-    "train_dl = DataLoader(train_ds, batch_size=64, shuffle=True)\n",
-    "valid_dl = DataLoader(valid_ds, batch_size=64)\n",
-    "test_dl = DataLoader(test_ds, batch_size=64)\n",
-    "\n",
-    "print(train_dl, \"\\n\", valid_dl, \"\\n\", test_dl)"
+    "# num_images = len([name for name in os.listdir(train_imgs_path) if os.path.isfile(os.path.join(train_imgs_path, name))])\n",
+    "# print(f\"Number of images: {num_images}\")"
    ]
   },
   {
@@ -179,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "0ac201bb",
    "metadata": {},
    "outputs": [],
@@ -197,7 +161,7 @@
     "        validation_losses, validation_accuracies = [], []\n",
     "\n",
     "        for image, label in tqdm(trainloader):\n",
-    "            image, label = image.to(DEVICE), label.to(DEVICE)\n",
+    "            image, label = image.to(device), label.to(device)\n",
     "            optimizer.zero_grad()\n",
     "            out = model.forward(image)\n",
     "        \n",
@@ -214,7 +178,7 @@
     "            optimizer.step()\n",
     "\n",
     "        for image, label in tqdm(valloader):\n",
-    "            image, label = image.to(DEVICE), label.to(DEVICE)\n",
+    "            image, label = image.to(device), label.to(device)\n",
     "            with torch.no_grad():\n",
     "                out = model.forward(image)\n",
     "\n",
@@ -264,11 +228,11 @@
    "source": [
     "model = torch.hub.load('pytorch/vision:v0.10.0', 'resnet101', pretrained=True)\n",
     "model.fc\n",
-    "model.fc = nn.Linear(2048, 2)\n",
+    "model.fc = nn.Linear(2048, 1)\n",
     "\n",
     "# Check the name of all the parameters\n",
     "for name, param in model.named_parameters():\n",
-    "  print(name)\n",
+    "  # print(name)\n",
     "  if \"fc\" not in name:\n",
     "    param.requires_grad_(False) # Inplace turn of gradient updates"
    ]
@@ -300,11 +264,11 @@
    "outputs": [],
    "source": [
     "model = torch.hub.load('pytorch/vision:v0.10.0', 'resnet101', pretrained=True)\n",
-    "model.fc = nn.Linear(2048, 2)\n",
+    "model.fc = nn.Linear(2048, 1)\n",
     "\n",
     "# Check the name of all the parameters\n",
     "for name, param in model.named_parameters():\n",
-    "  print(name)\n",
+    "  # print(name)\n",
     "  if \"fc\" not in name:\n",
     "    param.requires_grad_(False) # Inplace turn of gradient updates\n",
     "\n",
@@ -312,14 +276,42 @@
     "\n",
     "### MODEL TRAINING INPUTS ###\n",
     "epochs = 5\n",
-    "optimizer = optim.Adam(params=model.parameters(), lr=0.0001)\n",
-    "loss_fn = nn.CrossEntropyLoss()\n",
-    "batch_size = 128\n",
+    "optimizer = optim.SGD(params=model.parameters(), lr=0.0001)\n",
+    "loss_fn = nn.MSELoss()\n",
+    "batch_size = 1\n",
+    "\n",
+    "# Dataset creation\n",
+    "train_ds = GuessTheCorrelationDataset(root, transform=train_transforms, indexes=range(300))\n",
+    "valid_ds = GuessTheCorrelationDataset(root, transform=train_transforms, indexes=range(300, 400))\n",
+    "test_ds = GuessTheCorrelationDataset(root, transform=train_transforms, indexes=range(400, 500))\n",
     "\n",
     "### BUILD DATALOADERS ###\n",
-    "trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=4)\n",
-    "valloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=4)\n",
-    "\n",
+    "trainloader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=1)\n",
+    "valloader = DataLoader(valid_ds, batch_size=batch_size, shuffle=False, num_workers=1)\n",
+    "testloader = DataLoader(test_ds, batch_size=batch_size, shuffle=False, num_workers=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "561b5285",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_iterator = iter(trainloader)\n",
+    "data = next(data_iterator)\n",
+    "# data\n",
+    "# features, labels = data\n",
+    "# print(features, \"\\n\", labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b95a63d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "random_init_logs, model = train(model=model,\n",
     "                                device=DEVICE,\n",
@@ -334,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
