--- a/Transfer Learning.ipynb
+++ b/Transfer Learning.ipynb
@@ -115,7 +115,6 @@
     "\n",
     "        for image, label in tqdm(trainloader):\n",
     "            image, label = image.to(DEVICE), label.to(DEVICE)\n",
-    "            optimizer.zero_grad()\n",
     "            out = model.forward(image)\n",
     "        \n",
     "            ### CALCULATE LOSS ##\n",
@@ -127,9 +126,11 @@
     "            accuracy = (predictions == label).sum() / len(predictions)\n",
     "            training_accuracies.append(accuracy.item())\n",
     "\n",
+    "            # Backward and optimize\n",
+    "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "\n",
+    "            \n",
     "        for image, label in tqdm(valloader):\n",
     "            image, label = image.to(DEVICE), label.to(DEVICE)\n",
     "            with torch.no_grad():\n",
@@ -251,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
