Update Transfer Learning Corr.ipynb

--- a/Transfer Learning Corr.ipynb
+++ b/Transfer Learning Corr.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "id": "cb734155-29fe-4b8d-904b-0688c70edaa7",
    "metadata": {
     "tags": []
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "id": "575bc6d4",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "id": "0ac201bb",
    "metadata": {},
    "outputs": [],
@@ -141,28 +141,21 @@
     "def train(model, device, epochs, optimizer, loss_fn, batch_size, trainloader, valloader):\n",
     "    log_training = {\"epoch\": [],\n",
     "                    \"training_loss\": [],\n",
-    "                    \"training_acc\": [],\n",
-    "                    \"validation_loss\": [],\n",
-    "                    \"validation_acc\": []}\n",
+    "                    \"validation_loss\": []}\n",
     "\n",
     "    for epoch in range(1, epochs + 1):\n",
     "        print(f\"Starting Epoch {epoch}\")\n",
-    "        training_losses, training_accuracies = [], []\n",
-    "        validation_losses, validation_accuracies = [], []\n",
+    "        training_losses = []\n",
+    "        validation_losses = []\n",
     "\n",
     "        for image, label in tqdm(trainloader, ncols = 60):\n",
     "            image, label = image.to(device), label.to(device)\n",
-    "            optimizer.zero_grad()\n",
     "            out = model.forward(image)\n",
     "        \n",
     "            ### CALCULATE LOSS ##\n",
+    "            optimizer.zero_grad()\n",
     "            loss = loss_fn(out, label)\n",
     "            training_losses.append(np.sqrt(loss.item()))\n",
-    "\n",
-    "            # ### CALCULATE ACCURACY ###\n",
-    "            # predictions = torch.argmax(out, axis=1)\n",
-    "            # accuracy = (predictions == label).sum() / len(predictions)\n",
-    "            # training_accuracies.append(accuracy.item())\n",
     "\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -176,26 +169,15 @@
     "                loss = loss_fn(out, label)\n",
     "                validation_losses.append(np.sqrt(loss.item()))\n",
     "\n",
-    "                # ### CALCULATE ACCURACY ###\n",
-    "                # predictions = torch.argmax(out, axis=1)\n",
-    "                # accuracy = (predictions == label).sum() / len(predictions)\n",
-    "                # validation_accuracies.append(accuracy.item())\n",
-    "\n",
-    "        # training_loss_mean, training_acc_mean = np.mean(training_losses), np.mean(training_accuracies)\n",
-    "        # valid_loss_mean, valid_acc_mean = np.mean(validation_losses), np.mean(validation_accuracies)\n",
     "        training_loss_mean = np.mean(training_losses)\n",
     "        valid_loss_mean = np.mean(validation_losses)\n",
     "\n",
     "        log_training[\"epoch\"].append(epoch)\n",
     "        log_training[\"training_loss\"].append(training_loss_mean)\n",
-    "        # log_training[\"training_acc\"].append(training_acc_mean)\n",
     "        log_training[\"validation_loss\"].append(valid_loss_mean)\n",
-    "        # log_training[\"validation_acc\"].append(valid_acc_mean)\n",
     "\n",
     "        print(\"Training Loss:\", training_loss_mean) \n",
-    "        # print(\"Training Acc:\", training_acc_mean)\n",
     "        print(\"Validation Loss:\", valid_loss_mean)\n",
-    "        # print(\"Validation Acc:\", valid_acc_mean)\n",
     "        print(\"=====================================\\n\")\n",
     "        \n",
     "    return log_training, model"
@@ -277,10 +259,10 @@
     "model = model.to(DEVICE)\n",
     "\n",
     "### MODEL TRAINING INPUTS ###\n",
-    "epochs = 5\n",
+    "epochs = 50\n",
     "optimizer = optim.SGD(params=model.parameters(), lr=0.0001)\n",
     "loss_fn = nn.MSELoss()\n",
-    "batch_size = 128\n",
+    "batch_size = 64\n",
     "\n",
     "# Dataset creation\n",
     "train_ds = GuessTheCorrelationDataset(root,\n",
@@ -301,17 +283,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9ee40e7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_iterator = iter(trainloader)\n",
-    "data = next(data_iterator)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "561b5285",
    "metadata": {},
@@ -322,6 +293,7 @@
     "features, labels = data\n",
     "\n",
     "plt.imshow(features[0].permute(1, 2, 0), cmap='gray')\n",
+    "plt.axis('off')\n",
     "plt.show()"
    ]
   },
@@ -332,14 +304,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_init_logs, model = train(model=model,\n",
-    "                                device=DEVICE,\n",
-    "                                epochs=epochs,\n",
-    "                                optimizer=optimizer,\n",
-    "                                loss_fn=loss_fn,\n",
-    "                                batch_size=batch_size,\n",
-    "                                trainloader=trainloader,\n",
-    "                                valloader=valloader)"
+    "train_logs, model = train(model=model,\n",
+    "                          device=DEVICE,\n",
+    "                          epochs=epochs,\n",
+    "                          optimizer=optimizer,\n",
+    "                          loss_fn=loss_fn,\n",
+    "                          batch_size=batch_size,\n",
+    "                          trainloader=trainloader,\n",
+    "                          valloader=valloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "2604e23d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_log_df = pd.DataFrame({'Epoch': train_logs['epoch'],\n",
+    "                             'Training_Loss': train_logs['training_loss'],\n",
+    "                             'Validation_Loss': train_logs['validation_loss']})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b78123",
+   "metadata": {},
+   "source": [
+    "3000 training data @ 50 epochs:\n",
+    "\n",
+    "- Training Loss: 0.4556598829628105\n",
+    "- Validation Loss: 0.4534302428237914\n",
+    "\n",
+    "30000 training data @ 50 epochs:\n",
+    "\n",
+    "- Training Loss: 0.4431861734305133\n",
+    "- Validation Loss: 0.4413213843223881"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43c8fe5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "# Example: Plot loss over epochs\n",
+    "plt.plot(train_log_df['Epoch'], train_log_df['Training_Loss'],\n",
+    "         label='Training Loss', marker='o')\n",
+    "plt.plot(train_log_df['Epoch'], train_log_df['Validation_Loss'],\n",
+    "         label='Validation Loss', marker='o')\n",
+    "plt.title('Loss Over Epochs')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   }
  ],
